@@ -1,0 +1,12 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2012-06-04 10:48
+
+$extensionPath = t3lib_extMgm::extPath('table');
+return array(
+	'tx_table_db' => $extensionPath . 'lib/class.tx_table_db.php',
+	'tx_table_db_access' => $extensionPath . 'lib/class.tx_table_db_access.php',
+	'tx_table_db_base' => $extensionPath . 'lib/class.tx_table_db_base.php',
+	'tx_table_div' => $extensionPath . 'lib/class.tx_table_div.php',
+);
+?>
