@@ -34,7 +34,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'CGLcompliance_note' => '',
 	'constraints' => array(
 		'depends' => array(
-			'php' => '5.2.0-0.0.0',
+			'php' => '5.2.0-5.4.99',
 			'typo3' => '3.5.0-4.7.99',
 		),
 		'conflicts' => array(
